fix post-toc &  word-wrap

--- a/source/css/_base.scss
+++ b/source/css/_base.scss
@@ -11,7 +11,7 @@ body{
   background: #eaeaea;
   color: $main-font-color;
   white-space: normal;
-  word-break: break-all;
+  word-wrap: break-word;
   a{
     color: $main-font-color;
   }
