--- a/source/css/partials/_media.scss
+++ b/source/css/partials/_media.scss
@@ -7,10 +7,12 @@
     display: none;
   }
 }
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 1440px){
   .post-toc{
     display: none;
   }
+}
+@media only screen and (max-width: 800px){
   .mobile-header{
     display: block;
   }
